# promptracer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: test-cases.csv  translation-suite.yaml
src/promptlab/: __init__.py  cli.py  compare.py  eval.py  prompt.py
src/promptlab/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/promptpilot/: __init__.py  cli.py  compare.py  eval.py  prompt.py
src/promptpilot/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/promptracer/: __init__.py  batch.py  chain.py  cli.py  compare.py  config.py  dataset.py  eval.py  leaderboard.py  optimizer.py  playground.py  prompt.py  resilience.py  tracker.py
src/promptracer/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
tests/: test_batch.py  test_chain.py  test_compare.py  test_config.py  test_custom_provider.py  test_dataset.py  test_eval.py  test_leaderboard.py  test_optimizer.py  test_prompt.py  test_providers.py  test_resilience.py  test_tracker.py
